plugins {
    id 'java'
}

group 'com.lozaine'
version '3.4.0'

repositories {
    mavenCentral()
    maven { url 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/' }
    maven { url 'https://repo.onarandombox.com/content/groups/public/' }
    maven { url 'https://repo.codemc.org/repository/maven-public' }
}

dependencies {
    compileOnly 'org.spigotmc:spigot-api:26.1.1-R0.1-SNAPSHOT'
}

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    if (project.hasProperty('enableXlint')) {
        // Surface deprecated API usage when explicitly requested
        options.compilerArgs += '-Xlint:deprecation'
    }
}

jar {
    manifest {
        attributes(
                'Main-Class': 'com.lozaine.ResourceWorldResetter.ResourceWorldResetter'
        )
    }
}